# bonde-json-schema

./: .gitignore  README.md  build_docs.py  custom.css  donation.html  form.html  index.html  main.py  phone.html  pressure.html  pyproject.toml  versions.json  widget.html
schemas/: discovery.py
schemas/autofire/: v0.0.1.json
schemas/donation/: v0.0.1.json
schemas/form/: v0.0.1.json
schemas/phone/: v0.0.1.json
schemas/pressure/: v0.0.1.json
schemas/widget/: v0.0.1.json
