[project]
name = "actions-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "json-schema-for-humans>=1.4.1",
    "jsonschema>=4.25.1",
    "psycopg2-binary>=2.9.11",
    "semver>=3.0.4",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
